--- a/doc/sphinx/_static/notations.css
+++ b/doc/sphinx/_static/notations.css
@@ -115,15 +115,15 @@
 /* Coqtop IO and Coqdoc */
 /************************/
 
-.coqtop dd, .ansi-bg-default {
+.rocqtop dd, .ansi-bg-default {
     background: #eeeeee !important;
 }
 
-.coqtop dd, .ansi-fg-default {
+.rocqtop dd, .ansi-fg-default {
     color: #2e3436 !important;
 }
 
-.coqtop dt {                    /* Questions */
+.rocqtop dt {                    /* Questions */
     background: none !important;
     color: #333 !important;
     font-weight: normal !important;
@@ -131,13 +131,13 @@
     margin: 0 !important;
 }
 
-.coqtop dd {                    /* Responses */
+.rocqtop dd {                    /* Responses */
     padding: 0.5em;
     margin-left: 0 !important;
     margin-top: 0.5em !important;
 }
 
-.coqdoc > span, .coqtop dl {
+.coqdoc > span, .rocqtop dl {
     margin: 12px; /* Copied from RTD theme */
 }
 
@@ -145,17 +145,17 @@
     display: block;
 }
 
-.coqtop dt, .coqtop dd {
+.rocqtop dt, .rocqtop dd {
     border: none !important;
     display: block !important;
 }
 
-.coqtop.coqtop-hidden, dd.coqtop-hidden, dt.coqtop-hidden { /* Overqualifying for precedence */
+.rocqtop.rocqtop-hidden, dd.rocqtop-hidden, dt.rocqtop-hidden { /* Overqualifying for precedence */
     display: none !important;
 }
 
 /* FIXME: Specific to the RTD theme */
-.coqdoc > span, .coqtop dt, .coqtop dd, pre { /* pre added because of production lists */
+.coqdoc > span, .rocqtop dt, .rocqtop dd, pre { /* pre added because of production lists */
     font-family: Consolas,"Andale Mono WT","Andale Mono","Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace !important; /* Copied from RTD theme */
     font-size: 12px !important; /* Copied from RTD theme */
     line-height: 1.5 !important; /* Copied from RTD theme */
