--- a/doc/sphinx/_static/notations.css
+++ b/doc/sphinx/_static/notations.css
@@ -23,10 +23,10 @@
 }
 
 @font-face { /* This font has been edited to center all characters */
-  font-family: 'CoqNotations';
+  font-family: 'RocqNotations';
   font-style: normal;
   font-weight: 800;
-  src: local('CoqNotations'), url(./CoqNotations.ttf) format('truetype');
+  src: local('RocqNotations'), url(./RocqNotations.ttf) format('truetype');
 }
 
 .notation .notation-sup, .notation .notation-sub {
@@ -37,7 +37,7 @@
     display: inline-block;
     font-size: 0.45em;
     font-weight: bolder;
-    font-family: CoqNotations, monospace;
+    font-family: RocqNotations, monospace;
     height: 2.2em;
     line-height: 1.6em;
     position: absolute;
@@ -112,7 +112,7 @@
 }
 
 /************************/
-/* Coqtop IO and Coqdoc */
+/* Rocqtop IO and Rocqdoc */
 /************************/
 
 .rocqtop dd, .ansi-bg-default {
@@ -137,11 +137,11 @@
     margin-top: 0.5em !important;
 }
 
-.coqdoc > span, .rocqtop dl {
+.rocqdoc > span, .rocqtop dl {
     margin: 12px; /* Copied from RTD theme */
 }
 
-.coqdoc > span {
+.rocqdoc > span {
     display: block;
 }
 
@@ -155,7 +155,7 @@
 }
 
 /* FIXME: Specific to the RTD theme */
-.coqdoc > span, .rocqtop dt, .rocqtop dd, pre { /* pre added because of production lists */
+.rocqdoc > span, .rocqtop dt, .rocqtop dd, pre { /* pre added because of production lists */
     font-family: Consolas,"Andale Mono WT","Andale Mono","Lucida Console","Lucida Sans Typewriter","DejaVu Sans Mono","Bitstream Vera Sans Mono","Liberation Mono","Nimbus Mono L",Monaco,"Courier New",Courier,monospace !important; /* Copied from RTD theme */
     font-size: 12px !important; /* Copied from RTD theme */
     line-height: 1.5 !important; /* Copied from RTD theme */
@@ -253,7 +253,7 @@ dt > .property {
   color: #FFFFFF;
 }
 
-/* Pygments for Coq is confused by ‘…’ */
+/* Pygments for Rocq is confused by ‘…’ */
 code span.error {
     background: inherit !important;
     line-height: inherit !important;
@@ -267,7 +267,7 @@ code span.error {
 }
 
 
-.coqdoc-comment {
+.rocqdoc-comment {
     color: #808080 !important
 }
 
